replaced cucumberjs with yadda and updated corresponding tests to use the yadda style

--- a/.jshintrc
+++ b/.jshintrc
@@ -13,8 +13,12 @@
     "node": true,
     "globals": {
         "describe": false,
+        "before": false,
         "beforeEach": false,
+        "after": false,
         "afterEach": false,
+        "feature": false,
+        "scenarios": false,
         "it": false,
         "dump": false,
         "sinon": false,
