--- a/config/default.yml
+++ b/config/default.yml
@@ -1,5 +1,6 @@
 Default:
   projRoot: '/development/node/thoughtsom/src'
+  testRoot: '/development/node/thoughtsom/test'
 
 database:
   host: localhost
