--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "chai": "~1.8.1",
     "supertest": "~0.9.0",
     "sinon": "~1.7.3",
-    "cucumber": "~0.3.3",
-    "grunt-cucumber": "~0.2.3",
     "config": "~0.4.35",
-    "yaml": "~0.2.3"
+    "yaml": "~0.2.3",
+    "yadda": "~0.9.8",
+    "karma-browserifast": "~0.1.1"
   },
   "dependencies": {
     "mongoose": "~3.8.4",
