Added proxyquire as a dependency for intercepting commonjs require calls in the server-side code.

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "karma-browserifast": "~0.1.1",
     "nodemon": "~1.0.14",
     "grunt-nodemon": "~0.2.0",
-    "casual": "~1.4.3"
+    "casual": "~1.4.3",
+    "proxyquire": "~0.5.2"
   },
   "dependencies": {
     "mongoose": "~3.8.4",
