added an initial ui test that to verify that sinon, requirejs, and friends are working

--- a/.jshintrc
+++ b/.jshintrc
@@ -13,6 +13,7 @@
     "node": true,
     "globals": {
         "describe": false,
+        "define": false,
         "before": false,
         "beforeEach": false,
         "after": false,
