--- a/package.json
+++ b/package.json
@@ -30,12 +30,8 @@
     "grunt-contrib-watch": "~0.5.3",
     "karma-script-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.1",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-firefox-launcher": "~0.1.2",
-    "karma-jasmine": "~0.1.4",
     "requirejs": "~2.1.9",
     "karma-requirejs": "~0.2.0",
-    "karma-coffee-preprocessor": "~0.1.1",
     "karma-phantomjs-launcher": "~0.1.1",
     "karma": "~0.10.9",
     "mocha": "~1.17.1",
@@ -49,29 +45,17 @@
     "supertest": "~0.9.0",
     "sinon": "~1.7.3",
     "config": "~0.4.35",
-    "yaml": "~0.2.3",
     "yadda": "~0.9.8",
     "karma-browserifast": "~0.1.1",
     "nodemon": "~1.0.14",
     "grunt-nodemon": "~0.2.0",
     "casual": "~1.4.3",
     "proxyquire": "~0.5.2",
-    "coveralls": "~2.8.0",
-    "blanket": "~1.1.6",
-    "mocha-term-cov-reporter": "~0.2.0",
-    "lcov-parse": "0.0.6",
-    "mocha-lcov-reporter": "0.0.1"
+    "coveralls": "~2.8.0"
   },
   "dependencies": {
     "mongoose": "~3.8.4",
     "lodash": "~2.4.1",
     "express": "~3.4.8"
-  },
-  "config": {
-      "blanket": {
-          "pattern": [
-              "src/**/*.js"
-          ]
-      }
   }
 }
