updated server-side bdd tests to use the latest version of yadda

--- a/.jshintrc
+++ b/.jshintrc
@@ -19,6 +19,7 @@
         "after": false,
         "afterEach": false,
         "feature": false,
+        "featureFile": false,
         "scenarios": false,
         "it": false,
         "dump": false,
