--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "supertest": "~0.9.0",
     "sinon": "~1.7.3",
     "config": "~0.4.35",
-    "yadda": "~0.9.8",
-    "karma-browserifast": "~0.1.1",
+    "yadda": "^0.10.0",
+    "karma-browserifast": "~0.2.1",
     "nodemon": "~1.0.14",
     "grunt-nodemon": "~0.2.0",
     "casual": "~1.4.3",
