--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-contrib-jshint": "^0.8.0",
     "grunt-contrib-watch": "~0.5.3",
     "karma-script-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.1",
@@ -36,16 +36,16 @@
     "karma": "~0.10.9",
     "mocha": "~1.17.1",
     "karma-mocha": "~0.1.1",
-    "karma-chai": "0.0.2",
+    "karma-chai": "0.1.0",
     "karma-sinon": "~1.0.0",
     "grunt": "~0.4.2",
     "grunt-karma": "~0.6.2",
     "grunt-mocha-cov": "0.2.x",
-    "chai": "~1.8.1",
+    "chai": "^1.9.0",
     "supertest": "~0.9.0",
-    "sinon": "~1.7.3",
+    "sinon": "~1.9.0",
     "config": "~0.4.35",
-    "yadda": "^0.10.0",
+    "yadda": "^0.10.1",
     "karma-browserifast": "~0.2.1",
     "nodemon": "~1.0.14",
     "grunt-nodemon": "~0.2.0",
@@ -53,10 +53,10 @@
     "proxyquire": "~0.5.2",
     "coveralls": "~2.8.0",
     "grunt-docco": "~0.3.3",
-    "browserify": "~3.31.2"
+    "browserify": "^3.32.0"
   },
   "dependencies": {
-    "mongoose": "~3.8.4",
+    "mongoose": "^3.8.8",
     "lodash": "~2.4.1",
     "express": "~3.4.8"
   }
