switched from requirejs to commonjs modules for UI code. intentionally not using backbone and jquery npm modules thanks to defect with karma-commonjs. switched to using karma-commonjs because of its source map support.

--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "sinon": "~1.9.0",
     "config": "~0.4.35",
     "yadda": "^0.10.1",
-    "karma-browserifast": "~0.2.1",
     "nodemon": "~1.0.14",
     "grunt-nodemon": "~0.2.0",
     "casual": "~1.4.3",
     "proxyquire": "~0.5.2",
     "coveralls": "~2.8.0",
     "grunt-docco": "~0.3.3",
-    "browserify": "^3.32.0"
+    "browserify": "^3.32.0",
+    "karma-commonjs": "0.0.6"
   },
   "dependencies": {
     "mongoose": "^3.8.8",
