--- a/.jshintrc
+++ b/.jshintrc
@@ -27,6 +27,7 @@
         "expect": false,
         "assert": false,
         "_": false,
-        "$": false
+        "$": false,
+        "Backbone": false
     }
 }
