--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "lodash": "~2.4.1",
-    "jquery": "~2.0.3",
-    "backbone": "~1.1.2"
+    "backbone": "~1.1.2",
+    "jquery": "~2.1.0"
   }
 }
