--- a/.jshintrc
+++ b/.jshintrc
@@ -28,6 +28,8 @@
         "assert": false,
         "_": false,
         "$": false,
-        "Backbone": false
+        "angular": false,
+        "inject": false,
+        "controller": false
     }
 }
