--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "grunt-docco": "~0.3.3",
     "browserify": "^3.32.0",
     "karma-commonjs": "0.0.6",
-    "karma-browserifast": "~0.3.0"
+    "karma-browserifast": "~0.3.0",
+    "grunt-browserify": "~2.0.1",
+    "grunt-contrib-copy": "~0.5.0"
   },
   "dependencies": {
     "mongoose": "^3.8.8",
