--- a/package.json
+++ b/package.json
@@ -26,37 +26,34 @@
     "test": "grunt test"
   },
   "devDependencies": {
+    "browserify": "^3.32.0",
+    "casual": "~1.4.3",
+    "chai": "^1.9.0",
+    "config": "~0.4.35",
+    "coveralls": "~2.8.0",
+    "grunt": "~0.4.2",
+    "grunt-browserify": "~2.0.1",
+    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-jshint": "^0.8.0",
     "grunt-contrib-watch": "~0.5.3",
-    "karma-script-launcher": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.1",
-    "requirejs": "~2.1.9",
-    "karma-requirejs": "~0.2.0",
-    "karma-phantomjs-launcher": "~0.1.1",
-    "karma": "~0.10.9",
-    "mocha": "~1.17.1",
-    "karma-mocha": "~0.1.1",
-    "karma-chai": "0.1.0",
-    "karma-sinon": "~1.0.0",
-    "grunt": "~0.4.2",
-    "grunt-karma": "~0.6.2",
-    "grunt-mocha-cov": "0.2.x",
-    "chai": "^1.9.0",
-    "supertest": "~0.9.0",
-    "sinon": "~1.9.0",
-    "config": "~0.4.35",
-    "yadda": "^0.10.3",
-    "nodemon": "~1.0.14",
-    "grunt-nodemon": "~0.2.0",
-    "casual": "~1.4.3",
-    "proxyquire": "~0.5.2",
-    "coveralls": "~2.8.0",
     "grunt-docco": "~0.3.3",
-    "browserify": "^3.32.0",
-    "karma-commonjs": "0.0.6",
-    "karma-browserifast": "~0.3.0",
-    "grunt-browserify": "~2.0.1",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-karma": "^0.8.3",
+    "grunt-mocha-cov": "0.2.x",
+    "grunt-nodemon": "~0.2.0",
+    "karma": "^0.12.16",
+    "karma-browserifast": "^0.6.1",
+    "karma-chai": "^0.1.0",
+    "karma-commonjs": "0.0.8",
+    "karma-mocha": "^0.1.3",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-sinon": "^1.0.3",
+    "load-grunt-tasks": "^0.4.0",
+    "mocha": "~1.17.1",
+    "nodemon": "~1.0.14",
+    "proxyquire": "~0.5.2",
+    "sinon": "~1.9.0",
+    "supertest": "~0.9.0",
+    "yadda": "^0.10.3"
   },
   "dependencies": {
     "mongoose": "^3.8.8",
