--- a/bower.json
+++ b/bower.json
@@ -16,10 +16,8 @@
   ],
   "dependencies": {
     "lodash": "~2.4.1",
-    "angular": "~1.2.14",
-    "jquery": "~2.1.0"
+    "jquery": "~2.1.0",
+    "bootstrap": "~3.1.1"
   },
-  "devDependencies": {
-    "angular-mocks": "~1.2.14"
-  }
+  "devDependencies": {}
 }
