--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "grunt-karma": "^0.8.3",
     "grunt-mocha-cov": "0.2.x",
     "grunt-nodemon": "~0.2.0",
-    "grunt-templates-hogan": "^0.2.5",
+    "handlebars": "^1.3.0",
+    "hbsfy": "^1.3.2",
     "karma": "^0.12.16",
     "karma-browserifast": "^0.6.1",
     "karma-chai": "^0.1.0",
@@ -60,7 +61,6 @@
   "dependencies": {
     "backbone": "^1.1.2",
     "express": "~3.4.8",
-    "hogan.js": "^2.0.0",
     "jquery": "^2.1.1",
     "lodash": "~2.4.1",
     "mongoose": "^3.8.12"
