--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "lodash": "~2.4.1",
     "jquery": "~2.1.0",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "open-iconic": "~1.1.0"
   },
   "devDependencies": {}
 }
