--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node": "0.10.x"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt jshint; grunt bdd:server; grunt bdd:ui; grunt unit:server; grunt unit:ui"
   },
   "devDependencies": {
     "browserify": "^4.1.6",
@@ -37,6 +37,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-docco": "~0.3.3",
+    "grunt-grunticon": "^1.2.6",
     "grunt-karma": "^0.8.3",
     "grunt-mocha-cov": "0.2.x",
     "grunt-nodemon": "~0.2.0",
@@ -47,6 +48,7 @@
     "karma-chai": "^0.1.0",
     "karma-commonjs": "0.0.8",
     "karma-mocha": "^0.1.3",
+    "karma-mocha-reporter": "^0.2.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.3",
     "load-grunt-tasks": "^0.4.0",
@@ -56,7 +58,7 @@
     "sinon": "~1.9.0",
     "supertest": "~0.13.0",
     "uglifyify": "^2.4.0",
-    "yadda": "^0.10.12"
+    "yadda": "^0.10.13"
   },
   "dependencies": {
     "backbone": "^1.1.2",
