--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-karma": "^0.8.3",
     "grunt-mocha-cov": "0.2.x",
     "grunt-nodemon": "~0.2.0",
+    "grunt-plato": "^1.0.0",
     "handlebars": "^1.3.0",
     "hbsfy": "^1.3.2",
     "karma": "^0.12.16",
