updated jshint rules to be more strict

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,17 +1,54 @@
 {
-    "curly": true,
-    "eqeqeq": true,
-    "immed": true,
-    "latedef": "nofunc",
-    "newcap": true,
-    "noarg": true,
-    "sub": true,
-    "undef": true,
-    "unused": true,
-    "boss": true,
-    "eqnull": true,
-    "node": true,
+    "bitwise"       : true,
+    "curly"         : true,
+    "eqeqeq"        : true,
+    "forin"         : true,
+    "immed"         : true,
+    "latedef"       : true,
+    "newcap"        : true,
+    "noarg"         : true,
+    "noempty"       : true,
+    "nonew"         : true,
+    "plusplus"      : true,
+    "regexp"        : true,
+    "undef"         : true,
+    "strict"        : true,
+    "trailing"      : true,
+    "asi"           : false,
+    "boss"          : false,
+    "debug"         : false,
+    "eqnull"        : false,
+    "es5"           : false,
+    "esnext"        : false,
+    "evil"          : false,
+    "expr"          : false,
+    "funcscope"     : false,
+    "globalstrict"  : false,
+    "iterator"      : false,
+    "lastsemic"     : false,
+    "laxbreak"      : false,
+    "laxcomma"      : false,
+    "loopfunc"      : false,
+    "multistr"      : false,
+    "onecase"       : false,
+    "proto"         : false,
+    "regexdash"     : false,
+    "scripturl"     : false,
+    "smarttabs"     : false,
+    "shadow"        : false,
+    "sub"           : false,
+    "supernew"      : false,
+    "validthis"     : false,
+    "browser"       : true,
+    "node"          : false,
+    "nomen"         : false,
+    "onevar"        : false,
+    "passfail"      : false,
+    "white"         : false,
+    "indent"        : 4,
     "globals": {
+        "module": false,
+        "require": false,
         "describe": false,
         "define": false,
         "before": false,
@@ -25,11 +62,6 @@
         "dump": false,
         "sinon": false,
         "expect": false,
-        "assert": false,
-        "_": false,
-        "$": false,
-        "angular": false,
-        "inject": false,
-        "controller": false
+        "assert": false
     }
 }
