--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma": "^0.12.16",
     "karma-browserifast": "^0.6.1",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.4",
     "karma-commonjs": "0.0.8",
     "karma-mocha": "^0.1.3",
     "karma-mocha-reporter": "^0.2.5",
