--- a/package.json
+++ b/package.json
@@ -48,9 +48,7 @@
     "karma-browserifast": "^0.6.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.4",
-    "karma-commonjs": "0.0.8",
     "karma-mocha": "^0.1.3",
-    "karma-mocha-reporter": "^0.2.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.3",
     "load-grunt-tasks": "^0.5.0",
@@ -65,7 +63,7 @@
   },
   "dependencies": {
     "backbone": "^1.1.2",
-    "express": "~3.4.8",
+    "express": "^3.13.0",
     "jquery": "^2.1.1",
     "lodash": "~2.4.1",
     "mongoose": "^3.8.12"
