--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "handlebars": "^1.3.0",
     "hbsfy": "^1.3.2",
     "karma": "^0.12.16",
-    "karma-browserifast": "^0.6.1",
+    "karma-bro": "^0.6.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.4",
     "karma-mocha": "^0.1.3",
