--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chai": "^1.9.0",
     "config": "~0.4.35",
     "coveralls": "~2.8.0",
+    "faker": "^1.0.0",
     "grunt": "~0.4.2",
     "grunt-browserify": "~2.1.0",
     "grunt-contrib-copy": "~0.5.0",
