--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "karma-bro": "^0.6.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.4",
+    "karma-coverage": "^0.2.4",
     "karma-mocha": "^0.1.3",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.3",
